# ai-trading-research-system

./: .env.example  .gitignore  AGENTS.md  CONTROL_PLANE_GOVERNANCE_RESULT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  cli.py  control_cleanup_report.md  pyproject.toml  requirements.txt
configs/: openclaw_agent.paper.yaml
docs/: AGENT_WORK_GUIDE.md  CURRENT_STATE.md  PRIVACY_AND_GIT.md  README.md  architecture.md  architecture_review_alignment.md  archive_20260307.md  command_surface_governance_result.md  convergence_round2_delivery.md  core_concepts.md  current-path.md  decision_contract.md  deferred_authorization.md  dev_prerequisites.md  execution_pipeline.md  experience_schema.md  experiment_iteration_01.md  experiment_iteration_02.md  live_readiness_checklist.md  mock_vs_real.md  mvp-boundary.md  mvp_plan.md  nautilus_migration.md  next_phase_interface.md  openclaw-agent.md  openclaw-project-setup.md  openclaw_autonomous_paper_convergence.md  openclaw_integration.md  operations.md  plan_week_to_paper.md  real_5day_benchmark_fix_record.md  result_schema.md  scheduling.md  strategy_spec.md  system_architecture.md  system_final_check.md  uc09_audit_report.md  uc09_weekly_autonomous_paper.md  uc10_stage2_score_differentiation_verification.md
scripts/: check_dev_prerequisites.py  openclaw_approver_smoke.py  run_backtest.py  run_backtest_windows.py  run_demo.py  run_e2e_check.py  run_for_openclaw.py  run_paper.py  run_pipeline.py  run_research.py  run_scheduled.py  run_weekly_autonomous_paper.py  set_openclaw_workspace.py  verify_env.py  verify_experience_store.py  (+7 more)
(+186 files in other folders)
